Added presentation. Updated demo