@@ -1,2 +1,6 @@
 # virtual-threads-fly-io-tech-talk
 A demonstration of virtual threads in Java 19 and Fly.io deployment
+
+## Running Java 19 demo
+`javac --enable-preview --release 19 Application19.java`
+`java --enable-preview Application19`
